[BNK-53] feat: 상호명으로 카테고리 분류 기능 구현